<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_span="1"
    tools:context=".MainActivity4">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="394dp"
        android:layout_height="252dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonC"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetBottom="6dp"
                android:onClick="OnClickC"
                android:text="@string/C" />

            <Button
                android:id="@+id/buttonmaismenos"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickMaisMenos"
                android:text="@string/maisMenos" />

            <Button
                android:id="@+id/buttonapaga"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickApaga"
                android:text="@string/apaga" />

            <Button
                android:id="@+id/buttondividi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickDividi"
                android:text="@string/dividi" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickSete"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button8calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickOito"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button9calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickNove"
                android:text="@string/_9" />

            <Button
                android:id="@+id/buttonmultiplica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickMultiplica"
                android:text="@string/multiplica" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickQuatro"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickCinco"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button6calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickSeis"
                android:text="@string/_6" />

            <Button
                android:id="@+id/buttonmenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickSubtracao"
                android:text="@string/diminui" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickUm"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button2calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickDois"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button3calc"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClickTres"
                android:text="@string/_3" />

            <Button
                android:id="@+id/buttonmais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:onClick="OnClickSoma"
                android:text="@string/mais" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:onClick="OnClickZero"
                android:text="@string/_0" />

            <Button
                android:id="@+id/buttonponto"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:layout_weight="1"
                android:onClick="OnClickPonto"
                android:text="@string/ponto" />

            <Button
                android:id="@+id/buttonigual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="2"
                android:onClick="OnClickIgual"
                android:text="@string/igual" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editTextNumberDecimal10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="end"
        android:hint="@string/digite_um_numero"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal10"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal10"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>